; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_getenv.c__wgetenv.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdlib/extr_getenv.c__wgetenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @_wgetenv(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i64 @wcslen(i32* %8)
  store i64 %9, i64* %5, align 8
  %10 = call i32*** (...) @__p__wenviron()
  %11 = load i32**, i32*** %10, align 8
  store i32** %11, i32*** %4, align 8
  br label %12

12:                                               ; preds = %44, %1
  %13 = load i32**, i32*** %4, align 8
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %47

16:                                               ; preds = %12
  %17 = load i32**, i32*** %4, align 8
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %6, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = call i32* @wcschr(i32* %19, i32 61)
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %43

23:                                               ; preds = %16
  %24 = load i32*, i32** %7, align 8
  %25 = load i32*, i32** %6, align 8
  %26 = ptrtoint i32* %24 to i64
  %27 = ptrtoint i32* %25 to i64
  %28 = sub i64 %26, %27
  %29 = sdiv exact i64 %28, 4
  %30 = trunc i64 %29 to i32
  %31 = zext i32 %30 to i64
  %32 = load i64, i64* %5, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %43

34:                                               ; preds = %23
  %35 = load i32*, i32** %6, align 8
  %36 = load i32*, i32** %3, align 8
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @_wcsnicmp(i32* %35, i32* %36, i64 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %43, label %40

40:                                               ; preds = %34
  %41 = load i32*, i32** %7, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 1
  store i32* %42, i32** %2, align 8
  br label %48

43:                                               ; preds = %34, %23, %16
  br label %44

44:                                               ; preds = %43
  %45 = load i32**, i32*** %4, align 8
  %46 = getelementptr inbounds i32*, i32** %45, i32 1
  store i32** %46, i32*** %4, align 8
  br label %12

47:                                               ; preds = %12
  store i32* null, i32** %2, align 8
  br label %48

48:                                               ; preds = %47, %40
  %49 = load i32*, i32** %2, align 8
  ret i32* %49
}

declare dso_local i64 @wcslen(i32*) #1

declare dso_local i32*** @__p__wenviron(...) #1

declare dso_local i32* @wcschr(i32*, i32) #1

declare dso_local i32 @_wcsnicmp(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
